--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -5,11 +5,12 @@
 Add your content here.
 
 
-= Details =
+= Details about program input & output =
 
 The format of input parameters:
 
-
+   *input_coord* is a matrix 3xN in dimension, where N is the atom number or node number.
+   *input_hessian* is a 3Nx3N matrix, which represent the second order derivative of the potential function in space.
 Add your content here.  Format your content with:
   * Text in *bold* or _italic_
   * Headings, paragraphs, and lists
