--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-Add your content here.
+Currently, limited support is provided here.
 
 
 = Details about program input & output =
